# pydantic-examples

./: README.md  pyproject.toml
examples/: 1_basic.py  2_validators.py  3_aliases.py  4_serializers.py  5_from_file.py  6_config_management.py  7_openapi_conversion.py  8_fastapi.py
